--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Inter|Open+Sans&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Inter|Open+Sans&display=swap');
 
 #reviews-here {
   display: flex;
@@ -11,4 +11,4 @@
   position: relative;
   margin-left: 25%;
   margin-right: 25%;
-}
+} */
