--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Inter|Open+Sans&display=swap');
 
 #whole-app {
+  font-family: Inter;
   margin-left: 25%;
   margin-right: 25%;
 }
@@ -157,7 +158,7 @@
   top: 5%;
   bottom: 10%;
   background: white;
-  overflow: scroll;
+  overflow-y: scroll;
   border-radius: 25px;
 }
 
